minor changes to allow the images to be layered correctly

--- a/_code/_promo/index.html
+++ b/_code/_promo/index.html
@@ -61,8 +61,8 @@ helps you easily find and meet up with friends." />
           <h2>Who do you see shows with?</h2>
           <p>Add your friends so you can easily find each other at shows or festivals. Don&rsquo;t worry… you have control over who can find you using <span class="franc-text">franc</span>.</p>
         </div>
-        <img src="_assets/images/add-friends@2x.png" id="add-sh" class="image--screenshot" data-1000="opacity: 0; transform[sqrt]:scale(0.85);" data-bottom="opacity:1.0; transform[sqrt]:scale(1);" />
         <div id="white-franc" class="image" data-0="margin-right: -281px;" data-bottom="margin-right: 0;"></div>
+        <img src="_assets/images/add-friends@2x.png" id="add-sh" class="image--screenshot" data-1000="opacity: 0; transform[sqrt]:scale(0.85);" data-bottom="opacity:1.0; transform[sqrt]:scale(1);" />
       </div>
       
     </div>
@@ -95,10 +95,11 @@ helps you easily find and meet up with friends." />
     </div>
 
     <footer>
+      <div id="gray-franc" class="image"></div>
       <div class="full-width--update">
         <div class="m-update">
           <h3><span class="franc-text">franc</span> update&#8230;</h3>
-          <p>We are working hard to get the first testable version in your hands. If you would like to be one of select few testing <span class="franc-text">franc</span> then fill out the below.</p>
+          <p>We are working hard to get the first testable version in your hands. If you would like to be one of the select few testing <span class="franc-text">franc</span>, please fill out below.</p>
           <form class="m-form-sign-up--footer">
             <button class="m-button--primary">Sign up</button>
             <span>
@@ -138,7 +139,6 @@ helps you easily find and meet up with friends." />
 
         <small>&copy;2013 notch llc, all rights reserved. franc is a notch creation.</small>
       </div>
-      <div id="gray-franc" class="image"></div>
     </footer>
     <script src="_assets/scripts/skrollr.min.js"></script>
     <script src="_assets/scripts/main.js"></script>
