--- a/_code/_promo/for-festivals/index.html
+++ b/_code/_promo/for-festivals/index.html
@@ -4,82 +4,120 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>franc... never be lost at a show</title>
-    <meta name="description" content="Don’t be lost at the show (or festival), franc
+    <title>franc... making your festivalgoers happy</title>
+    <meta name="description"   content="Don’t be lost at the show (or festival), franc
 helps you easily find and meet up with friends." />
-    <meta name="keyword" content="franc, franc finder, find franc, festival friend finder, friend finder app, friend locator app, find my friends, show finder, festival app" />
-    <meta name="author" content="notch LLC" />
+    <meta name="keyword"       content="franc, franc finder, find franc, festival friend finder, friend finder app, friend locator app, find my friends, show finder, festival app, find friends at a show, flamingo franc" />
+    <meta name="author"        content="notch LLC" />
+    <meta property="fb:app_id" content="1234567890" /> 
+    <meta property="og:type"   content="mobile app" /> 
+    <meta property="og:url"    content="http://findfranc.com" /> 
+    <meta property="og:title"  content="franc a festivalgoers friend" /> 
+    <meta property="og:image"  content="https://findfranc.com/_assets/images/franc-app-preview-si@2x.png" /> 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="assets/stylesheets/main.css"/>
+    <link rel="stylesheet" href="../_assets/stylesheets/main.css"/>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   </head>
-  <body>
-    <!--[if lt IE 8]>
+  <body class="for-festivals">
+    <!--[if lt IE 9]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <header id="home">
-      <div class="m-logo">
-        <h1>franc... never be lost at a show</h1>
+      <div class="full-width--header">
+        <div class="m-logo">
+          <h1>franc... never be lost at a show</h1>
+        </div>
+        <div class="m-pitch" data-0="opacity:1.0;" data-300="opacity:0;">
+          <h1>franc makes sure your ticket holders spend more time enjoying the festival and less time wandering around trying to find each other.</h1>
+          <p>Want to add franc to your festival? email james@findfranc.com.</p>
+          <a href="mailto:james@findfranc.com" class="m-button m-button--white" title="email me, James">Send us an email</a>
+        </div>
+        <a href="../" class="m-button" title="for festival owners and promoters" role="top-nav">For individuals</a>
       </div>
-      <div class="m-pitch">
-        <h1>franc makes sure your ticket holders spend more time enjoying the festival and less time wandering around trying to find each other.</h1>
-        <p>Want to add franc to your festival? email james@findfranc.com.</p>
-        <a href="mailto:james@findfranc.com" class="m-button m-button--white" title="let's chat about it">Send us an email</a>
+      <div class="bottom-button">
+        <a href="#story" class="m-button--large" title="learn more about franc" role="start-parallax">Learn more</a>
       </div>
-      <a href="../" class="m-button m-button--white" title="for individuals wanting to learn more about franc">For individuals</a>
-      <a href="#" class="m-button m-button--large m-button--white" title="learn more about franc">Learn more</a>
     </header>
 
-    <div class="">
-      <p><span class="franc-text">franc</span> gives your ticket holders the ability to easily find and meet up with their friends during the festival at any moment, from anywhere. Imagine offering your ticket holders the line-up, schedule, location of their friends, and the ability to meet up with them. This means they&rsquo;ll be able to spend more time enjoying the amazing entertainment stress-free.</p>
+    <div id="story" class="m-wrapper--white">
+      <div class="m-mod--story">
+        <p><span class="franc-text">franc!</span> gives your ticket holders the ability to easily find and meet up with their friends during the festival at any moment, from anywhere. Imagine offering your ticket holders the line-up, schedule, location of their friends, and the ability to meet up with them. This means they'll be able to spend more time enjoying the amazing entertainment stress-free.</p>
 
-      <p>If you&rsquo;re interested in adding <span class="franc-text">franc</span> to your current festival app email me, <a href="mailto:james@findfranc.com">james@findfranc.com</a>.</p>
+        <p>If you&rsquo;re interested in adding <span class="franc-text">franc</span> to your current festival app email me, <a href="mailto:james@findfranc.com" title="email me, James">james@findfranc.com.</a></p>
 
-      <p class="is-bold">Don&rsquo;t have an app yet?</p>
+        <h2>Don&rsquo;t have an app yet?</h2>
 
-      <p>Don&rsquo;t worry! We can fix that. Send me an email, <a href="mailto:james@findfranc.com">james@findfranc.com</a>, and we can discuss developing a branded app for your festival which will include your festival&rsquo;s line-up, schedule, and <span class="franc-text">franc!</span></p>
+        <p>Don&rsquo;t worry! We can fix that. Send me an email, <a href="mailto:james@findfranc.com" title="email me, James">james@findfranc.com</a>, and we can discuss developing a branded app for your festival which will include your festival&rsquo;s line-up, schedule, and <span class="franc-text">franc</span>!</p>
+      </div>
+      <div id="story-bg" class="image"></div>
+      <div class="festival-story-bg">
+        <img src="/_assets/images/together-at-last@2x.png" id="met-up-group" class="image">
+      </div>
     </div>
 
     <footer>
-      <div class="m-update">
-        <h3><span class="franc-text">franc</span> update...</h3>
-        <p>We are working hard to get the first testable version in your hands. If you would like to be one of select few testing <span class="franc-text">franc</span> then fill out the below.</p>
-        <form class="m-form-sign-up">
-          <div class="m-form__field">
-            <label class="is-hidden" for="email">Email</label>
-            <input id="email" type="email" name="email" placeholder="Your email...">
-  <!-- the error should only happen if: the person enters an invalid email. If Jill has already sent us her email, DO NOT duplicate it but handle the form as if she sent an approved email and show the success section. Once the user focuses the input to try again remove the error by reapplying the is-hidden class to the m-error div. -->
-            <div class="is-hidden m-error">
-              <p>Oops! This isn't a valid email.</p>
-            </div>
-          </div>
-          <button class="m-button m-button--primary m-button--large">Sign up</button>
-        </form>
+      <div id="gray-franc" class="image"></div>
+      <div class="full-width--update">
+        <div class="m-update">
+          <h3><span class="franc-text">franc</span> update&#8230;</h3>
+          <p>We are working hard to get the first testable version in your hands. If you would like to be one of the select few testing <span class="franc-text">franc</span>, please fill out below.</p>
+          <form class="m-form-sign-up--footer">
+            <button class="m-button--primary">Sign up</button>
+            <span>
+              <label class="is-hidden" for="email">Email</label>
+              <input id="email" type="email" name="email" placeholder="Enter your email&#8230;">
+              <div class="is-hidden m-error">
+                <p>Oops! This isn't a valid email.</p>
+              </div>
+            </span>
+          </form>
+        </div>
       </div>
 
-      <div class="contact">
-        <a href="#" class="email" target="_blank" title="email us">Email</a>
-        <a href="#" class="twitter" target="_blank" title="keep up on the latest happenings">Twitter</a>
-        <a href="#" class="dribbble" target="_blank" title="view franc's latest design work">Dribbble</a>
+      <div class="m-divider"></div>
+
+      <div class="full-width--contact">
+        <div class="contact">
+          <a href="mailto:james@findranc.com" class="contact-link--email" target="_blank" title="email us">Email</a>
+          <a href="#" class="contact-link--twitter" target="_blank" title="keep up on the latest happenings">Twitter</a>
+          <a href="#" class="contact-link--dribbble" target="_blank" title="view franc's latest design work">Dribbble</a>
+        </div>
+      
+        <div class="social">
+          <div class="fb-share-button" data-href="http://findfranc.com" data-type="button"></div>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://findfranc.com" data-text="franc helps you easily find and meet up with friends at shows or festivals." data-count="none" data-hashtags="findfranc">Tweet</a>
+        </div>
       </div>
 
-      <div class="social">
-        <!-- facebook like site -->
-        <!-- tweet site -->
+      <div class="m-divider--small-margin"></div>
+
+      <div class="full-width--footer">
+        <div class="m-subnav">
+          <a href="for-festivals/" title="for festival owners and promoters">For festivals</a>
+          <a href="mailto:jack@findfranc.com" title="email us for help">Support</a>
+          <a href="mailto:james@findfranc.com" title="email us to chat">Contact</a>
+        </div>
+
+        <small>&copy;2013 notch llc, all rights reserved. franc is a notch creation.</small>
       </div>
-
-      <ul class="m-subnav">
-        <li><a href="for-festivals/" title="for festival owners and promoters">For festivals</a></li>
-        <li><a href="mailto:jack@findfranc.com" title="email us for help">Support</a></li>
-        <li><a href="mailto:james@findfranc.com" title="email us to chat">Contact</a></li>
-      </ul>
-
-      <small>&copy;2013 notch llc, all rights reserved. franc is a notch creation.</small>
     </footer>
-
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=189927507716660";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+    <script src="../_assets/scripts/skrollr.min.js"></script>
+    <script src="../_assets/scripts/jquery.easing.js"></script>
+    <script src="../_assets/scripts/easing.compatibility.js"></script>
+    <script src="../_assets/scripts/jquery.smooth-scroll.min.js"></script>
+    <script src="../_assets/scripts/main.js"></script>
   </body>
 </html>
 
