--- a/_code/_promo/index.html
+++ b/_code/_promo/index.html
@@ -20,7 +20,7 @@ helps you easily find and meet up with friends." />
     <link rel="stylesheet" href="_assets/stylesheets/main.css"/>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   </head>
-  <body>
+  <body class="for-individuals">
     <!--[if lt IE 9]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -33,7 +33,7 @@ helps you easily find and meet up with friends." />
         <div class="m-pitch" data-0="opacity:1.0;" data-300="opacity:0;">
           <h1>Don&rsquo;t be lost at the show (or festival), <span class="franc-text">franc</span> helps you easily find and meet up with friends.</h1>
           <p>Coming soon for the summer festival scene! Want updates?</p>
-          <form class="m-form-sign-up">
+          <form class="m-form-sign-up" action="http://jcwenzeldesign.us3.list-manage.com/subscribe/post" method="post">
             <button class="m-button m-button--white">Sign up</button>
             <span>
               <label class="is-hidden" for="email">Email</label>
@@ -47,11 +47,11 @@ helps you easily find and meet up with friends." />
         <a href="for-festivals/" class="m-button--light-blue" title="for festival owners and promoters" role="top-nav">For festivals</a>
       </div>
       <div class="bottom-button">
-        <a href="#" class="m-button--large" title="learn more about franc" role="start-parallax">Learn more</a>
+        <a href="#story" class="m-button--large" title="learn more about franc" role="start-parallax">Learn more</a>
       </div>
     </header>
 
-    <div class="m-wrapper--white">
+    <div id="story" class="m-wrapper--white">
       <div class="m-mod--story">
         <p>We&rsquo;ve all been there… some of your group wants to groove at the funk show, others wants to have a bluegrass hoedown, while a few are arriving later this evening and you ALL want to meet for the headliner! How do you make sure this all goes down without a hitch? <span class="franc-text">franc!</span></p>
 
@@ -67,7 +67,7 @@ helps you easily find and meet up with friends." />
           <p>Add your friends so you can easily find each other at shows or festivals. Don&rsquo;t worry… you have control over who can find you using <span class="franc-text">franc</span>.</p>
         </div>
         <div id="white-franc" class="image" data-0="margin-right: -281px;" data-bottom="margin-right: 0;"></div>
-        <img src="_assets/images/add-friends@2x.png" id="add-sh" class="image--screenshot" data-1000="opacity: 0; transform[sqrt]:scale(0.85);" data-bottom="opacity:1.0; transform[sqrt]:scale(1);" />
+        <img src="_assets/images/add-friends@2x.png" id="add-sh" class="image--screenshot" />
       </div>
       
     </div>
@@ -78,12 +78,13 @@ helps you easily find and meet up with friends." />
           <h2>Where is everyone?</h2>
           <p>You&rsquo;ll always know where your friends are at shows or festivals using <span class="franc-text">franc&rsquo;s</span> map.</p>
         </div>
-        <img src="_assets/images/use-the-map@2x.png" id="map-sh" class="image--screenshot"/>
-        <img id="marker-1" class="image--marker" src="_assets/images/larger-marker@2x.png" />
-        <img id="marker-2" class="image--marker" src="_assets/images/large-marker@2x.png" />
-        <img id="marker-3" class="image--marker" src="_assets/images/marker@2x.png" />
-        <img id="marker-4" class="image--marker" src="_assets/images/small-marker@2x.png" />
-        <img id="marker-5" class="image--marker" src="_assets/images/smaller-marker@2x.png" />
+        <img src="_assets/images/use-the-map@2x.png" id="map-sh" class="image--screenshot" />
+
+        <img id="marker-1" class="image--marker" src="_assets/images/larger-marker@2x.png" data-1500="transform:scale(0.2)" data-2100="transform:scale(1)"  />
+        <img id="marker-2" class="image--marker" src="_assets/images/large-marker@2x.png" data-1500="transform:scale(0.2)" data-2100="transform:scale(1)" />
+        <img id="marker-3" class="image--marker" src="_assets/images/marker@2x.png" data-1500="transform:scale(0.2)" data-2100="transform:scale(1)" />
+        <img id="marker-4" class="image--marker" src="_assets/images/small-marker@2x.png" data-1500="transform:scale(0.2)" data-2100="transform:scale(1)" />
+        <img id="marker-5" class="image--marker" src="_assets/images/smaller-marker@2x.png" data-1500="transform:scale(0.2)" data-2100="transform:scale(1)" />
       </div>
       
     </div>
@@ -96,7 +97,7 @@ helps you easily find and meet up with friends." />
         </div>
         <img src="_assets/images/ask-for-a-stay-put@2x.png" id="stay-put-sh" class="image--screenshot"/>
       </div>
-      <div id="met-up-group" class="image"></div>
+      <div id="met-up-group" class="image" data-2200="margin-top: -200px" data-2700="margin-top: -374px;"></div>
     </div>
 
     <footer>
@@ -105,7 +106,7 @@ helps you easily find and meet up with friends." />
         <div class="m-update">
           <h3><span class="franc-text">franc</span> update&#8230;</h3>
           <p>We are working hard to get the first testable version in your hands. If you would like to be one of the select few testing <span class="franc-text">franc</span>, please fill out below.</p>
-          <form class="m-form-sign-up--footer">
+          <form class="m-form-sign-up--footer" action="http://jcwenzeldesign.us3.list-manage.com/subscribe/post" method="post">
             <button class="m-button--primary">Sign up</button>
             <span>
               <label class="is-hidden" for="email">Email</label>
@@ -155,6 +156,7 @@ helps you easily find and meet up with friends." />
     }(document, 'script', 'facebook-jssdk'));</script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     <script src="_assets/scripts/skrollr.min.js"></script>
+    <script src="_assets/scripts/jquery.smooth-scroll.min.js"></script>
     <script src="_assets/scripts/main.js"></script>
   </body>
 </html>
