--- a/_code/_promo/for-festivals/index.html
+++ b/_code/_promo/for-festivals/index.html
@@ -22,7 +22,11 @@ helps you easily find and meet up with friends." />
   </head>
   <body class="for-festivals">
     <!--[if lt IE 9]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <div class="ie-overlay">
+      <div class="ie-message">
+        <p>You&rsquo;re browser is outdated. Please <a href="http://browsehappy.com/">upgrade it</a> your online experience.</p>
+      </div>
+    </div>
     <![endif]-->
 
     <header id="home">
@@ -64,16 +68,24 @@ helps you easily find and meet up with friends." />
         <div class="m-update">
           <h3><span class="franc-text">franc</span> update&#8230;</h3>
           <p>We are working hard to get the first testable version in your hands. If you would like to be one of the select few testing <span class="franc-text">franc</span>, please fill out below.</p>
-          <form class="m-form-sign-up--footer">
-            <button class="m-button--primary">Sign up</button>
-            <span>
-              <label class="is-hidden" for="email">Email</label>
-              <input id="email" type="email" name="email" placeholder="Enter your email&#8230;">
-              <div class="is-hidden m-error">
-                <p>Oops! This isn't a valid email.</p>
+          <!-- Begin MailChimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="http://jcwenzeldesign.us3.list-manage.com/subscribe/post?u=cc266b737231b7bd3113bf708&amp;id=c616ef33e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="m-form-sign-up--footer validate" target="_blank" novalidate>
+              <input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="m-button--primary">
+              <span>
+                <div class="mc-field-group">
+                  <label for="mce-EMAIL" class="is-hidden">Email Address</label>
+                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter your email&#8230;">
+                </div>
+              </span>
+              <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
               </div>
-            </span>
-          </form>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;"><input type="text" name="b_cc266b737231b7bd3113bf708_c616ef33e7" value=""></div>
+            </form>
+          </div>
         </div>
       </div>
 
@@ -82,8 +94,8 @@ helps you easily find and meet up with friends." />
       <div class="full-width--contact">
         <div class="contact">
           <a href="mailto:james@findranc.com" class="contact-link--email" target="_blank" title="email us">Email</a>
-          <a href="#" class="contact-link--twitter" target="_blank" title="keep up on the latest happenings">Twitter</a>
-          <a href="#" class="contact-link--dribbble" target="_blank" title="view franc's latest design work">Dribbble</a>
+          <a href="ttps://twitter.com/notchLLC" class="contact-link--twitter" target="_blank" title="keep up on the latest happenings">Twitter</a>
+          <a href="http://dribbble.com/jcwenzel/buckets/194671-franc-the-showgoers-app" class="contact-link--dribbble" target="_blank" title="view franc's latest design work">Dribbble</a>
         </div>
       
         <div class="social">
