added the skrollr id div so we have mobile support

--- a/_code/_promo/index.html
+++ b/_code/_promo/index.html
@@ -28,7 +28,7 @@ helps you easily find and meet up with friends." />
       </div>
     </div>
     <![endif]-->
-
+    <div id="skrollr-body">
     <header id="home">
       <div class="full-width--header">
         <div class="m-logo">
@@ -166,6 +166,7 @@ helps you easily find and meet up with friends." />
         <small>&copy;2013 notch llc, all rights reserved. franc is a notch creation.</small>
       </div>
     </footer>
+    </div>
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
