--- a/_code/_promo/index.html
+++ b/_code/_promo/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>franc... never be lost at a show</title>
-    <meta name="description"   content="Don’t be lost at the show (or festival), franc
-helps you easily find and meet up with friends." />
+    <meta name="description"   content="Don’t be lost at the show (or festival), franc helps you easily find and meet up with friends." />
     <meta name="keyword"       content="franc, franc finder, find franc, festival friend finder, friend finder app, friend locator app, find my friends, show finder, festival app, find friends at a show, flamingo franc" />
     <meta name="author"        content="notch LLC" />
     <meta property="fb:app_id" content="1234567890" /> 
@@ -34,7 +33,7 @@ helps you easily find and meet up with friends." />
           <div class="m-logo">
             <h1>franc... never be lost at a show</h1>
           </div>
-          <div class="m-pitch" data-0="opacity:1.0;" data-700="opacity:0;">
+          <div class="m-pitch" data-top="opacity:1.0;" data--630-top="opacity:0;">
             <h1>Don&rsquo;t be lost at the show (or festival), <span class="franc-text">franc</span> helps you easily find and meet up with friends.</h1>
             <p>Coming soon for the summer festival scene! Want updates?</p>
             <!-- Begin MailChimp Signup Form -->
@@ -56,7 +55,7 @@ helps you easily find and meet up with friends." />
               </form>
             </div>
           </div>
-          <a href="for-festivals/" class="m-button--light-blue" title="for festival owners and promoters" role="top-nav">For festivals</a>
+          <a href="for-festivals/" class="m-button--dark-blue" title="for festival owners and promoters" role="top-nav">For festivals</a>
         </div>
         <div class="bottom-button">
           <a href="#story" class="m-button--large" title="learn more about franc" role="start-parallax">Learn more</a>
@@ -91,11 +90,11 @@ helps you easily find and meet up with friends." />
           </div>
           <img src="_assets/images/use-the-map@2x.png" id="map-sh" class="image--screenshot" />
 
-          <img id="marker-1" class="image--marker" src="_assets/images/larger-marker@2x.png" data-1700="transform:scale(0.2)" data-2250="transform:scale(1)"  />
-          <img id="marker-2" class="image--marker" src="_assets/images/large-marker@2x.png" data-1700="transform:scale(0.2)" data-2250="transform:scale(1)" />
-          <img id="marker-3" class="image--marker" src="_assets/images/marker@2x.png" data-1700="transform:scale(0.2)" data-2250="transform:scale(1)" />
-          <img id="marker-4" class="image--marker" src="_assets/images/small-marker@2x.png" data-1700="transform:scale(0.2)" data-2250="transform:scale(1)" />
-          <img id="marker-5" class="image--marker" src="_assets/images/smaller-marker@2x.png" data-1700="transform:scale(0.2)" data-2250="transform:scale(1)" />
+          <img id="marker-1" class="image--marker" src="_assets/images/larger-marker@2x.png" data-bottom="transform:scale(0.2)" data-250-top="transform:scale(1)"  />
+          <img id="marker-2" class="image--marker" src="_assets/images/large-marker@2x.png" data-bottom="transform:scale(0.2)" data--12-bottom="transform:scale(1)" />
+          <img id="marker-3" class="image--marker" src="_assets/images/marker@2x.png" data-bottom="transform:scale(0.2)" data--112-bottom="transform:scale(1)" />
+          <img id="marker-4" class="image--marker" src="_assets/images/small-marker@2x.png" data-bottom="transform:scale(0.2)" data-100-top="transform:scale(1)" />
+          <img id="marker-5" class="image--marker" src="_assets/images/smaller-marker@2x.png" data-bottom="transform:scale(0.2)" data-300-top="transform:scale(1)" />
         </div>      
       </div>
 
@@ -107,7 +106,7 @@ helps you easily find and meet up with friends." />
           </div>
           <img src="_assets/images/ask-for-a-stay-put@2x.png" id="stay-put-sh" class="image--screenshot"/>
         </div>
-        <div id="met-up-group" class="image" data-2300="margin-top: -200px" data-2900="margin-top: -374px;"></div>
+        <div id="met-up-group" class="image" data--100-top="margin-top: -200px" data-bottom="margin-top: -374px;"></div>
       </div>
 
       <footer>
@@ -147,7 +146,7 @@ helps you easily find and meet up with friends." />
           </div>
         
           <div class="social">
-            <div class="fb-share-button" data-href="http://findfranc.com" data-type="button"></div>
+            <div class="fb-share-button fb_iframe_widget" data-href="http://findfranc.com" data-type="button"></div>
             <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://findfranc.com" data-text="franc helps you easily find and meet up with friends at shows or festivals." data-count="none" data-hashtags="findfranc">Tweet</a>
           </div>
         </div>
