--- a/_code/_promo/for-festivals/index.html
+++ b/_code/_promo/for-festivals/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>franc... making your festivalgoers happy</title>
-    <meta name="description"   content="Don’t be lost at the show (or festival), franc
-helps you easily find and meet up with friends." />
+    <meta name="description"   content="franc makes sure your ticket holders spend more time enjoying the festival and less time wandering around trying to find each other." />
     <meta name="keyword"       content="franc, franc finder, find franc, festival friend finder, friend finder app, friend locator app, find my friends, show finder, festival app, find friends at a show, flamingo franc" />
     <meta name="author"        content="notch LLC" />
     <meta property="fb:app_id" content="1234567890" /> 
@@ -34,8 +33,8 @@ helps you easily find and meet up with friends." />
           <div class="m-logo">
             <h1>franc... never be lost at a show</h1>
           </div>
-          <div class="m-pitch" data-0="opacity:1.0;" data-700="opacity:0;">
-            <h1>franc makes sure your ticket holders spend more time enjoying the festival and less time wandering around trying to find each other.</h1>
+          <div class="m-pitch" data-top="opacity:1.0;" data--630-top="opacity:0;">
+            <h1><span class="t-normal">franc</span> makes sure your ticket holders spend more time enjoying the festival and less time wandering around trying to find each other.</h1>
             <p>Want to add franc to your festival? email james@findfranc.com.</p>
             <a href="mailto:james@findfranc.com" class="m-button m-button--white" title="email me, James">Send us an email</a>
           </div>
