fixing the story parallaxing

--- a/_code/_promo/index.html
+++ b/_code/_promo/index.html
@@ -68,7 +68,7 @@
 
           <p><span class="franc-text">franc</span> makes finding and meeting up with friends at shows or festivals easy.</p>
         </div>
-        <div id="story-bg" class="image" data-280="margin-top: -200px;" data-620="margin-top: 0;"></div>
+        <div id="story-bg" class="image" data-bottom="margin-top: -200px;" data-top="margin-top: 0;"></div>
       </div>
 
       <div class="m-wrapper">
